clusters/k3s-cluster/copyparty/copyparty.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: copyparty
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: copyparty
  namespace: copyparty
spec:
  selector:
    matchLabels:
      app: copyparty
  template:
    metadata:
      labels:
        app: copyparty
    spec:
      containers:
        - name: copyparty
          image: copyparty/ac:1.19.20
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
          ports:
            - containerPort: 3923
          volumeMounts:
            - mountPath: /w
              name: srvpvc
            - mountPath: /cfg
              name: copyparty-cm
      volumes:
        - name: srvpvc
          persistentVolumeClaim:
            claimName: srvcopypartyspvc
        - name: copyparty-cm
          configMap:
            name: copyparty-cm
---
apiVersion: v1
kind: Service
metadata:
  name: copyparty
  namespace: copyparty
spec:
  selector:
    app: copyparty
  ports:
    - port: 3923
      targetPort: 3923
      name: copyparty
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: copyparty
  namespace: copyparty
  labels:
    name: copyparty
spec:
  rules:
    - host: copyparty.jacobbanghart.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: copyparty
                port:
                  number: 3923
